# my-azure-page-blob-ext

./: Cargo.toml  README.md
src/: exact_payload.rs  lib.rs  my_azure_page_blob_advanced.rs  my_azure_page_blob_with_retries.rs  page_blob_cached_data.rs  utils.rs
src/my_azure_page_blob_with_cache/: found_pages.rs  mod.rs  my_azure_page_blob_with_cache.rs  page_blob_cached_data.rs
src/pages_cache/: pages_interval.rs
src/pages_cache_intervals/: mod.rs  pages_cache_intervals.rs  pages_cache_item.rs  pages_merger.rs
src/pages_cache_list/: cached_page.rs  cached_pages_list.rs  index_by_date.rs  mod.rs  pages_cache.rs
src/pages_list/: mod.rs  page_from_cache_result.rs  pages_cache.rs  pages_list.rs
src/with_retries/: create_blob_if_not_exists.rs  create_container_if_not_exists.rs  download.rs  get_blob_props.rs  handle_create_blob_or_container_error.rs  handle_error.rs  handle_read_error.rs  mod.rs  resize.rs  save_pages.rs  set_pages_amount.rs
