[package]
name = "my-azure-page-blob-advanced"
version = "0.1.0"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-azure-storage-sdk = { branch = "0.2.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-telemetry = { branch = "main", git = "https://github.com/MyJetTools/my-telemetry.git" }
rust-extensions = { branch = "main", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
sha2 = "*"
