[package]
name = "my-azure-page-blob-ext"
version = "0.1.0"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
my-azure-storage-sdk = { tag = "0.4.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-telemetry = { tag = "0.2.2", git = "https://github.com/MyJetTools/my-telemetry.git" }
rust-extensions = { tag = "0.1.2", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
async-trait = "*"
sha2 = "*"
