[package]
name = "my-azure-page-blob-ext"
version = "0.1.1"
authors = ["Andrey <amigin@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = []
blob_with_cache = []

[dependencies]


my-azure-storage-sdk = { tag = "0.5.0", git = "https://github.com/MyJetTools/my-azure-storage.git" }
my-telemetry = { tag = "1.1.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git" }
tokio = { version = "*", features = ["full"] }
async-trait = "*"
sha2 = "*"
